# maven-tools-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CORPORATE-CERTIFICATES.md  NOTICE  README.md  docker-compose.yml  mvnw.cmd  pom.xml  server.json
.claude/commands/: deps-age.md  deps-check.md  deps-health.md  deps-upgrade.md
.github/prompts/: dependency-audit.prompt.md  security-scan.prompt.md  upgrade-plan.prompt.md
.github/workflows/: ci.yml  dependency-agent-self-update.yml  docker.yml  publish-mcp-registry.yml
agents/copilot-maven-tools-agent/: README.md  pyproject.toml  requirements.txt
agents/copilot-maven-tools-agent/scripts/: __init__.py  upgrade.py
agents/copilot-maven-tools-agent/src/: __init__.py
agents/copilot-maven-tools-agent/src/analysis/: __init__.py  dependency.py
agents/copilot-maven-tools-agent/src/copilot/: __init__.py  sdk_client.py
agents/copilot-maven-tools-agent/src/mcp/: __init__.py  direct_client.py
agents/copilot-maven-tools-agent/tests/: __init__.py  test_analysis.py  test_upgrade.py
docs/: architecture.md  dogfooding.md  examples.md  setup.md  tools.md  troubleshooting.md
docs/superpowers/plans/: 2026-05-12-pom-aware-analysis-phase-6a.md  2026-05-13-pom-aware-multi-module.md
src/main/java/com/arvindand/mcp/maven/: MavenMcpServerApplication.java  MavenToolsConstants.java
src/main/java/com/arvindand/mcp/maven/config/: CacheConfig.java  CacheConstants.java  Context7McpClientConfig.java  Context7Properties.java  HttpClientConfig.java  (+6 more)
src/main/resources/: application-docker.yaml  application-http.yaml  application-no-context7.yaml  application-web.yaml  application.yaml  logback-spring.xml
src/test/java/com/arvindand/mcp/maven/: ClientStdio.java  MavenMcpServerIT.java  MavenMcpServerIntegrationTest.java  TestHelpers.java
src/test/resources/: application-test.yaml
(+90 files in other folders)
